<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="18dp">


            <com.haris.navigato.TextviewUtil.UbuntuLightTextview
                android:id="@+id/txt_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_top"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp" />

            <com.haris.navigato.TextviewUtil.UbuntuMediumTextview
                android:id="@+id/txt_places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@+id/txt_top"
                android:text="@string/heading_places"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_12sdp" />


            <LinearLayout
                android:id="@+id/layout_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:clickable="true"
                android:gravity="right|center"
                android:orientation="horizontal"
                android:paddingRight="10dp">


                <com.haris.navigato.TextviewUtil.UbuntuMediumTextview
                    android:id="@+id/txt_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:text="@string/heading_more"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:layout_marginLeft="8dp"
                    android:clickable="false"
                    android:src="@drawable/right_arrow_icon"
                    android:tint="@color/colorPrimaryDark" />

            </LinearLayout>

        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_places"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="15dp"></android.support.v7.widget.RecyclerView>


    </LinearLayout>


</LinearLayout>